--- a/src/Brioche/CoreBundle/Resources/views/Brioche/address.html.twig
+++ b/src/Brioche/CoreBundle/Resources/views/Brioche/address.html.twig
@@ -1,5 +1,9 @@
 {% extends "BriocheCoreBundle:Brioche:layout.html.twig" %}
 
+{% block title %}Adresse de livraison - {{ parent() }}{% endblock %}
+
+{% block metadesc %}Indiquez votre adresse de livraison où je dois livrer.{% endblock %}
+
 {% block body %}
 {{ parent() }}
 
