--- a/src/Brioche/CoreBundle/Resources/views/Brioche/round.html.twig
+++ b/src/Brioche/CoreBundle/Resources/views/Brioche/round.html.twig
@@ -1,5 +1,9 @@
 {% extends "BriocheCoreBundle:Brioche:layout.html.twig" %}
 
+{% block title %}Choix de la tournée - {{ parent() }}{% endblock %}
+
+{% block metadesc %}Choisissez la tournée dans laquelle vous voulez être livré.{% endblock %}
+
 {% block body %}
 {{ parent() }}
 
