--- a/src/Brioche/CoreBundle/Resources/views/Brioche/size.html.twig
+++ b/src/Brioche/CoreBundle/Resources/views/Brioche/size.html.twig
@@ -1,5 +1,9 @@
 {% extends "BriocheCoreBundle:Brioche:layout.html.twig" %}
 
+{% block title %}Taille de brioche - {{ parent() }}{% endblock %}
+
+{% block metadesc %}Choisissez la taille de votre brioche, pour 2 ou 6 personnes ?{% endblock %}
+
 {% block body %}
 {{ parent() }}
 
