--- a/src/Brioche/CoreBundle/Resources/views/Brioche/summary.html.twig
+++ b/src/Brioche/CoreBundle/Resources/views/Brioche/summary.html.twig
@@ -1,5 +1,9 @@
 {% extends "BriocheCoreBundle:Brioche:layout.html.twig" %}
 
+{% block title %}Résumé de la commande - {{ parent() }}{% endblock %}
+
+{% block metadesc %}Résumé de la commande. Relisez et validez votre brioche.{% endblock %}
+
 {% block body %}
 {{ parent() }}
 
