--- a/src/Brioche/CoreBundle/Resources/views/Command/_actionsSection.html.twig
+++ b/src/Brioche/CoreBundle/Resources/views/Command/_actionsSection.html.twig
@@ -3,18 +3,12 @@
         <div class="panel-body">
             <div class="row actions">
                 <div class="col-sm-4">
-                    <div class="well">
-                        <a class="choose-message" href="#actions" title="Ecrire un message">
-                            <img class="img-responsive" width="140" src="{{ asset('bundles/briochecore/img/msg.png') }}" alt="Message" />
+                    <div class="well text-center">
+                        <a class="choose-message" href="#actions" title="Écrire un message">
+                            Écrire un message
+                            <br />
+                            <img class="img-responsive" width="100" src="{{ asset('bundles/briochecore/img/msg.png') }}" alt="Message" />
                         </a>
-                    </div>
-                </div>
-                <div class="col-sm-4">
-                    <div class="well">
-                    </div>
-                </div>
-                <div class="col-sm-4">
-                    <div class="well">
                     </div>
                 </div>
             </div>
