--- a/src/Brioche/CoreBundle/Resources/views/Front/index.html.twig
+++ b/src/Brioche/CoreBundle/Resources/views/Front/index.html.twig
@@ -43,7 +43,7 @@
                                 <img src="{{ asset('bundles/briochecore/img/saxo.png') }}" alt="Livraison" class="img-circle img-thumbnail img-responsive">
                                 <br />
                                 <br />
-                                Je livre moi même vos brioches dans les villes que je dessers sans coût supplémentaire.<br />
+                                Je livre moi même vos brioches dans les <a href="{{ path('front_cities') }}">villes que je dessers</a> sans coût supplémentaire.<br />
                                 Vous la recevez tiède, et dans le crénaux horaire que vous avec choisi.
                             </p>
                         </div>
@@ -51,6 +51,7 @@
                 </div>
             </div>
         </div>
+    </div>
 </section>
 
 <section class="round">
