--- a/src/Brioche/CoreBundle/Resources/views/Front/products.html.twig
+++ b/src/Brioche/CoreBundle/Resources/views/Front/products.html.twig
@@ -1,5 +1,9 @@
 {% extends "BriocheCoreBundle::layout.html.twig" %}
 
+{% block title %}Ingrédients et allergies - {{ parent() }}{% endblock %}
+
+{% block metadesc %}Liste des ingrédients que j'utilise pour faire votre brioche. Les allergènes y sont aussi indiqués.{% endblock %}
+
 {% block body %}
 <section class="products">
     <h2 class="text-center">Ingrédients et allergies</h2>
