--- a/src/Brioche/CoreBundle/Resources/views/_navbar.html.twig
+++ b/src/Brioche/CoreBundle/Resources/views/_navbar.html.twig
@@ -17,6 +17,8 @@
                 <li class="{{ 'active'|onpath('front_index') }}"><a href="{{ path('front_index') }}">Accueil</a></li>
                 <li class="{{ 'active'|onpath() }}"><a href="{{ path('brioche_index') }}">Ma brioche</a></li>
                 <li class="{{ 'active'|onpath('front_products') }}"><a href="{{ path('front_products') }}">Ingrédients et allergies</a></li>
+                <li class="{{ 'active'|onpath('front_cities') }}"><a href="{{ path('front_cities') }}">Villes desservies</a></li>
+                <li class="{{ 'active'|onpath('front_contact') }}"><a href="{{ path('front_contact') }}">Contact</a></li>
             </ul>
         </div>
     </div>
