--- a/src/Brioche/CoreBundle/Resources/views/layout.html.twig
+++ b/src/Brioche/CoreBundle/Resources/views/layout.html.twig
@@ -4,14 +4,16 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta name="description" content="{% block metadesc %}Personnalisez et commandez votre brioche artisanale en ligne, et faîtes vous livrer en Essonne !{% endblock %}" />
         
-        <title>{% block title %}Brioche du Dimanche{% endblock %}</title>
+        <title>{% block title %}Brioche du Dimanche Essonne{% endblock %}</title>
 
         <link rel="stylesheet" href="//maxcdn.bootstrapcdn.com/bootstrap/3.2.0/css/bootstrap.min.css">
         <link rel="stylesheet" href="//bootswatch.com/united/bootstrap.min.css">
         <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.0/css/bootstrap-glyphicons.css">
         <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/select2/3.5.0/select2.min.css">
         <link rel="stylesheet" href="//cdnjs.cloudflare.com/ajax/libs/select2/3.5.0/select2-bootstrap.min.css">
+        <link rel="stylesheet" href="//fuelcdn.com/fuelux/2.3.1/css/fuelux.min.css">
         
         {% stylesheets
             'bundles/briochecore/css/fuelux-wizard.css'
