simple mail, author robot

--- a/src/Brioche/CoreBundle/Resources/views/Command/_firstMessageSection.html.twig
+++ b/src/Brioche/CoreBundle/Resources/views/Command/_firstMessageSection.html.twig
@@ -1,6 +1,6 @@
 {% set message = {
     content: 'Vous avez validé votre brioche. Un suivi de commande a été créé. Vous pouvez vous en servir pour communiquer avec Brioche du Dimanche.',
-    author: constant('Brioche\\CoreBundle\\Entity\\Message::AUTHOR_BRIOCHE_DU_DIMANCHE'),
+    author: constant('Brioche\\CoreBundle\\Entity\\Message::AUTHOR_ROBOT'),
     dateCreate: brioche.dateLock
 } %}
 <div id="suivi-commande" style="position:relative;bottom:58px">
