contact phonr to img, malformed ipn listener

--- a/src/Brioche/CoreBundle/Resources/views/Front/contact.html.twig
+++ b/src/Brioche/CoreBundle/Resources/views/Front/contact.html.twig
@@ -16,10 +16,10 @@
                         <strong>Brioche du Dimanche</strong><br />
                         <br />
                         <abbr title="Email">
-                            <span class="glyphicon glyphicon-envelope"></span></abbr>contact@brioche-du-dimanche.com<br />
+                            <span class="glyphicon glyphicon-envelope"></span></abbr><a href="mailto:contact@brioche-du-dimanche.com">contact@brioche-du-dimanche.com</a><br />
                         <br />
                         <abbr title="Téléphone">
-                            <span class="glyphicon glyphicon-phone"></span></abbr>+336 67 37 99 96<br />
+                            <span class="glyphicon glyphicon-phone"></span></abbr><img src="{{ asset('bundles/briochecore/img/phone-number.png') }}" alt="Chargement du numéro..." /><br />
                     </address>
                 </div>
             </div>
