--- a/src/Brioche/CoreBundle/Resources/views/Front/contact.html.twig
+++ b/src/Brioche/CoreBundle/Resources/views/Front/contact.html.twig
@@ -13,7 +13,7 @@
             <div class="panel panel-default">
                 <div class="panel-body">
                     <address class="lead text-center">
-                        <strong>Brioche du Dimanche</strong><br />
+                        <h3>Brioche du Dimanche</h3><br />
                         <br />
                         <abbr title="Email">
                             <span class="glyphicon glyphicon-envelope"></span></abbr><a href="mailto:contact@brioche-du-dimanche.com">contact@brioche-du-dimanche.com</a><br />
