fix wording following Palmito advices

--- a/src/Brioche/CoreBundle/Resources/views/Front/index.html.twig
+++ b/src/Brioche/CoreBundle/Resources/views/Front/index.html.twig
@@ -30,7 +30,7 @@
                                 <img src="{{ asset('bundles/briochecore/img/cooking.png') }}" alt="Fabrication" class="img-circle img-thumbnail img-responsive">
                                 <br />
                                 <br />
-                                Une fois la commande validée, je prépare votre brioche la veille pour le lendemain
+                                Une fois la commande validée, je prépare votre brioche
                                 <a href="{{ path('front_products') }}">avec ces ingrédients</a>.<br />
                                 Je la prépare la veille pour le lendemain, et la fais cuire le jour même.
                             </p>
