--- a/src/Brioche/CoreBundle/Resources/views/_rounds.html.twig
+++ b/src/Brioche/CoreBundle/Resources/views/_rounds.html.twig
@@ -1,5 +1,5 @@
 <div class="row">
-    <div class="col-md-4 col-md-offset-4">
+    <div class="col-sm-4 col-sm-offset-4">
         <div class="center-block tournees">
             {% if rounds|length > 0 %}
                 {% for round in rounds %}
@@ -19,14 +19,28 @@
                         {% endif %}
                     </div>
                 {% endfor %}
-            {% else %}
-                <p class="well lead text-center">
-                    Il n'y a pas de tournées prevues pour l'instant.
-                </p>
             {% endif %}
         </div>
         <form action="{{ path('brioche_round') }}" method="post" class="form-round">
             <input type="hidden" name="round" />
         </form>
+        <div>
+            <div class="panel">
+                <div class="panel-body">
+                    {% if rounds|length == 0 %}
+                        <p class="lead">
+                            Il n'y a pas de tournées prevues pour l'instant.
+                        </p>
+                    {% endif %}
+                    <p>
+                        Vous souhaitez reçevoir un email
+                        lorsque une nouvelle tournée est prévue ?
+                        Vous pouvez enregistrer votre adresse email ici :
+                    </p>
+                    {{ form(mailForm) }}
+                    <p class="lead text-success mail-list-bottom-message"></p>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
