--- a/src/Brioche/CoreBundle/Resources/views/Front/index.html.twig
+++ b/src/Brioche/CoreBundle/Resources/views/Front/index.html.twig
@@ -44,7 +44,7 @@
                                 <br />
                                 <br />
                                 Je livre moi même vos brioches dans les <a href="{{ path('front_cities') }}">villes que je dessers</a> sans coût supplémentaire.<br />
-                                Vous la recevez tiède, et dans le crénaux horaire que vous avec choisi.
+                                Vous la recevez tiède, et dans le crénaux horaire que vous avez choisi.
                             </p>
                         </div>
                     </div>
