--- a/src/Brioche/CoreBundle/Resources/public/css/style.css
+++ b/src/Brioche/CoreBundle/Resources/public/css/style.css
@@ -131,3 +131,9 @@ section.actions .action {
 address abbr {
     margin-right: 12px;
 }
+.stars {
+    float: right;
+}
+.stars .glyphicon-star-empty {
+    color: lightgrey;
+}
