--- a/src/Brioche/CoreBundle/Resources/views/_navbar.html.twig
+++ b/src/Brioche/CoreBundle/Resources/views/_navbar.html.twig
@@ -14,11 +14,12 @@
         <!-- Collect the nav links, forms, and other content for toggling -->
         <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
             <ul class="nav navbar-nav">
-                <li class="{{ 'active'|onpath('front_index') }}"><a href="{{ path('front_index') }}">Accueil</a></li>
-                <li class="{{ 'active'|onpath() }}"><a href="{{ path('brioche_index') }}">Ma brioche</a></li>
-                <li class="{{ 'active'|onpath('front_products') }}"><a href="{{ path('front_products') }}">Ingrédients et allergies</a></li>
-                <li class="{{ 'active'|onpath('front_cities') }}"><a href="{{ path('front_cities') }}">Villes desservies</a></li>
-                <li class="{{ 'active'|onpath('front_contact') }}"><a href="{{ path('front_contact') }}">Contact</a></li>
+                <li class="{{ 'active'|onpath('front_index') }}"><a href="{{ path('front_index') }}"><span class="glyphicon glyphicon-home"></span> Accueil</a></li>
+                <li class="{{ 'active'|onpath() }}"><a href="{{ path('brioche_index') }}"><img width="32" height="32" src="{{ asset('favicons/mstile-70x70.png') }}" alt="Brioche" style="margin:-12px 0" />Ma brioche</a></li>
+                <li class="{{ 'active'|onpath('front_products') }}"><a href="{{ path('front_products') }}"><span class="glyphicon glyphicon-cutlery"></span> Ingrédients et allergies</a></li>
+                <li class="{{ 'active'|onpath('front_cities') }}"><a href="{{ path('front_cities') }}"><span class="glyphicon glyphicon-plane"></span> Villes desservies</a></li>
+                <li class="{{ 'active'|onpath('comment_index') }}"><a href="{{ path('comment_index') }}"><span class="glyphicon glyphicon-comment"></span> Livre d'or</a></li>
+                <li class="{{ 'active'|onpath('front_contact') }}"><a href="{{ path('front_contact') }}"><span class="glyphicon glyphicon-phone"></span> Contact</a></li>
             </ul>
         </div>
     </div>
