--- a/src/Brioche/CoreBundle/Resources/views/layout.html.twig
+++ b/src/Brioche/CoreBundle/Resources/views/layout.html.twig
@@ -22,6 +22,8 @@
             <link rel="stylesheet" type="text/css" href="{{ asset_url }}" />
         {% endstylesheets %}
 
+        {% block extra_css %}{% endblock %}
+
         <!--[if lt IE 9]>
           <script src="https://oss.maxcdn.com/html5shiv/3.7.2/html5shiv.min.js"></script>
           <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
@@ -62,6 +64,8 @@
         %}
                 <script src="{{ asset_url }}" type="text/javascript"></script>
         {% endjavascripts %}
+
+        {% block extra_js %}{% endblock %}
 
         {# Google anal (anal ?) (yes, analytics !) #}
         <script type="text/javascript">
