--- a/src/Brioche/CoreBundle/Resources/views/Brioche/_wizard.html.twig
+++ b/src/Brioche/CoreBundle/Resources/views/Brioche/_wizard.html.twig
@@ -29,6 +29,11 @@
                         complete: brioche.getValidAddress
                     },
                     {
+                        route: 'brioche_time',
+                        title: 'Heure',
+                        complete: brioche.getValidTime
+                    },
+                    {
                         route: 'brioche_summary',
                         title: 'Résumé',
                         complete: false
