fix last commit

--- a/src/Brioche/CoreBundle/Resources/views/Brioche/_wizard.html.twig
+++ b/src/Brioche/CoreBundle/Resources/views/Brioche/_wizard.html.twig
@@ -6,32 +6,32 @@
                     {
                         route: 'brioche_round',
                         title: 'Tournée',
-                        complete: brioche.getValidRound
+                        complete: brioche.validRound
                     },
                     {
                         route: 'brioche_type',
                         title: 'Type',
-                        complete: brioche.getValidType
+                        complete: brioche.validType
                     },
                     {
                         route: 'brioche_size',
                         title: 'Taille',
-                        complete: brioche.getValidSize
+                        complete: brioche.validSize
                     },
                     {
                         route: 'brioche_perso',
                         title: 'Touche personnelle',
-                        complete: brioche.getValidPerso
+                        complete: brioche.validPerso
                     },
                     {
                         route: 'brioche_address',
                         title: 'Adresse',
-                        complete: brioche.getValidAddress
+                        complete: brioche.validAddress
                     },
                     {
                         route: 'brioche_time',
                         title: 'Heure',
-                        complete: brioche.getValidTime
+                        complete: brioche.validTime
                     },
                     {
                         route: 'brioche_summary',
