--- a/src/Brioche/CoreBundle/Resources/views/Brioche/time.html.twig
+++ b/src/Brioche/CoreBundle/Resources/views/Brioche/time.html.twig
@@ -26,7 +26,7 @@
                         <div class="row">
                             {{ form_start(briocheTimeForm) }}
                             <div class="col-sm-4 lead text-center">
-                                <p>Entre {{ form_widget(briocheTimeForm.shipTimeMin) }}</p>
+                                <p><span class="glyphicon glyphicon-time"></span> Entre {{ form_widget(briocheTimeForm.shipTimeMin) }}</p>
                             </div>
                             <div class="col-sm-4 lead text-center">
                                 <p>et {{ form_widget(briocheTimeForm.shipTimeMax) }}</p>
