guest book: hide star input, display cursor on star hover

--- a/src/Brioche/CoreBundle/Resources/public/css/style.css
+++ b/src/Brioche/CoreBundle/Resources/public/css/style.css
@@ -163,3 +163,9 @@ address abbr {
 .stars .glyphicon-star-empty {
     color: lightgrey;
 }
+.extended-rating {
+    display: none;
+}
+.rating-container {
+    cursor: pointer;
+}
