--- a/src/Brioche/CoreBundle/Resources/views/Front/contact.html.twig
+++ b/src/Brioche/CoreBundle/Resources/views/Front/contact.html.twig
@@ -9,7 +9,7 @@
     <h2 class="text-center">Contact</h2>
     <br />
     <div class="row">
-        <div class="col-sm-6 col-sm-offset-3 col-md-4 col-md-offset-4">
+        <div class="col-sm-10 col-sm-offset-1 col-md-8 col-md-offset-2 col-lg-6 col-lg-offset-3">
             <div class="panel panel-default">
                 <div class="panel-body">
                     <address class="lead text-center">
