--- a/src/Brioche/CoreBundle/Resources/views/Front/index.html.twig
+++ b/src/Brioche/CoreBundle/Resources/views/Front/index.html.twig
@@ -5,7 +5,7 @@
     <h2 class="text-center">Fonctionnement</h2>
     <br />
     <div class="row">
-        <div class="col-xs-8 col-xs-offset-2">
+        <div class="col-sm-8 col-sm-offset-2">
             <div class="panel panel-default">
                 <div class="panel-body">
                     <div class="row">
