--- a/src/Brioche/CoreBundle/Resources/views/Brioche/_summaryTable.html.twig
+++ b/src/Brioche/CoreBundle/Resources/views/Brioche/_summaryTable.html.twig
@@ -1,4 +1,4 @@
-<img alt="alt" src="http://dummyimage.com/800x200/ababab/515151.jpg">
+<img src="{{ asset('bundles/briochecore/img/type-' ~ (brioche.type ? 'parisienne' : 'vendeenne') ~ '-large.jpg') }}" alt="Brioche {{ brioche.type ? 'Parisienne' : 'Vendéenne' }}">
 <br />
 <div class="row text-center">
     <div class="col-md-6">
