--- a/src/Brioche/CoreBundle/Resources/views/Brioche/type.html.twig
+++ b/src/Brioche/CoreBundle/Resources/views/Brioche/type.html.twig
@@ -11,15 +11,15 @@
     <h2 class="text-center">Type de brioche</h2>
     <br />
     <div class="row">
-        <div class="col-sm-3 col-xs-6 col-sm-offset-3">
+        <div class="col-sm-4 col-sm-offset-2 col-xs-6 col-sm-offset-3">
             <a href="#" class="thumbnail type-vendeene">
-                <img src="http://dummyimage.com/400x300/ababab/515151.jpg" alt="alt">
+                <img src="{{ asset('bundles/briochecore/img/type-vendeenne.jpg') }}" alt="Brioche Vendéenne">
                 <h3 class="text-center">Vendéenne</h3>
             </a>
         </div>
-        <div class="col-sm-3 col-xs-6">
+        <div class="col-sm-4 col-xs-6">
             <a href="#" class="thumbnail type-parisienne">
-                <img src="http://dummyimage.com/400x300/ababab/515151.jpg" alt="alt">
+                <img src="{{ asset('bundles/briochecore/img/type-parisienne.jpg') }}" alt="Brioche Parisienne">
                 <h3 class="text-center">Parisienne</h3>
             </a>
         </div>
