--- a/src/Brioche/CoreBundle/Resources/public/css/style.css
+++ b/src/Brioche/CoreBundle/Resources/public/css/style.css
@@ -84,6 +84,7 @@ h1 {
 }
 .fuelux .wizard {
     border-radius: 100px;
+    overflow: hidden;
 }
 .fuelux .wizard .steps li:nth-child(1) {
     border-radius: 100px 0 0 100px;
