--- a/src/Brioche/CoreBundle/Resources/views/Brioche/perso.html.twig
+++ b/src/Brioche/CoreBundle/Resources/views/Brioche/perso.html.twig
@@ -17,8 +17,8 @@
                 <h3 class="text-center">{{ brioche.typeTitle }} {{ brioche.size.value }}</h3>
                 <div class="padd">
                     <p class="lead">
-                        Vous préférez une brioche bien sucrée, ou peu beurrée ?
-                        Personnalisez ici la composition de votre brioche !
+                        Vous préférez une brioche bien sucrée, ou peu beurrée&nbsp;?
+                        Personnalisez ici la composition de votre brioche&nbsp;!
                     </p>
                     <br />
                     <form class="form-horizontal" role="form" method="post">
