--- a/src/Brioche/CoreBundle/Resources/views/Command/_paymentOptionsSection.html.twig
+++ b/src/Brioche/CoreBundle/Resources/views/Command/_paymentOptionsSection.html.twig
@@ -12,7 +12,7 @@
         <div class="col-sm-6">
             <a href="{{ pay_full_url }}" class="thumbnail" target="_blank">
                 <p class="well text-center lead">
-                    <img width="200" src="{{ asset('bundles/briochecore/img/cb.png') }}" alt="Carte bancaire" />
+                    <img width="200" src="{{ asset('bundles/briochecore/img/cb.png') }}" alt="Carte bancaire" class="img-responsive" />
                 </p>
                 <p class="text-center">Payer tout maintenant</p>
             </a>
@@ -20,9 +20,9 @@
         <div class="col-sm-6">
             <a href="{{ pay_half_url }}" class="thumbnail" target="_blank">
                 <p class="well text-center lead">
-                    <img width="99" src="{{ asset('bundles/briochecore/img/cb.png') }}" alt="Liquide" />
+                    <img width="96" src="{{ asset('bundles/briochecore/img/cb.png') }}" alt="Liquide" />
                     +
-                    <img width="90" src="{{ asset('bundles/briochecore/img/cash.png') }}" alt="Liquide" />
+                    <img width="82" src="{{ asset('bundles/briochecore/img/cash.png') }}" alt="Liquide" />
                 </p>
                 <p class="text-center">
                     Payer la moitié maintenant, et le reste
