--- a/src/Brioche/CoreBundle/Resources/views/Front/cities.html.twig
+++ b/src/Brioche/CoreBundle/Resources/views/Front/cities.html.twig
@@ -13,7 +13,7 @@
             <div class="panel panel-default">
                 <div class="panel-body">
                     <p class="lead">
-                        Je livre pour l'instant vos brioches en Essonne, dans les villes suivantes uniqement :<br />
+                        Je livre pour l'instant vos brioches en Essonne, dans les villes suivantes uniquement :<br />
                         <br />
 
                         <ul>
