--- a/src/Brioche/CoreBundle/Resources/views/_rounds.html.twig
+++ b/src/Brioche/CoreBundle/Resources/views/_rounds.html.twig
@@ -34,7 +34,7 @@
                     {% endif %}
                     <p>
                         Vous souhaitez reçevoir un email
-                        lorsque une nouvelle tournée est prévue ?
+                        lorsqu'une nouvelle tournée est prévue ?
                         Vous pouvez enregistrer votre adresse email ici :
                     </p>
                     {{ form(mailForm) }}
