--- a/src/Brioche/CoreBundle/Resources/public/css/style.css
+++ b/src/Brioche/CoreBundle/Resources/public/css/style.css
@@ -170,3 +170,17 @@ address abbr {
 .rating-container {
     cursor: pointer;
 }
+#form-promo {
+}
+#form-promo label {
+    font-weight: 400;
+    text-align: left;
+    padding: 0;
+    margin-top: 4px;
+}
+#form-promo .form-group {
+    margin-bottom: 0;
+}
+#form-promo .has-feedback .form-control-feedback {
+    top: -2px;
+}
