--- a/src/Brioche/CoreBundle/Resources/views/Brioche/summary.html.twig
+++ b/src/Brioche/CoreBundle/Resources/views/Brioche/summary.html.twig
@@ -17,7 +17,7 @@
 
                 <br /><br />
                 <div class="row">
-                    <div class="col-md-10 col-md-offset-1">
+                    <div class="col-lg-10 col-lg-offset-1">
                         {% if not brioche.allValid %}
                             <p class="text-center">
                                 Votre brioche n'est pas terminée.
